--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                     <i class="material-icons">email</i>
                   </span>
                   <span class="data">
-                    <a href="mailto:demo.store@gmail.com">dbaesics@gmail.com</a>
+                    <a href="mailto:dbaesics@gmail.com">dbaesics@gmail.com</a>
                   </span>
                 </span>
               </li>
